# spooky-list

./: .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  jest.config.mjs  next.config.js  package-lock.json  package.json
backend/: Dockerfile  Makefile  fly.toml  manage.py  pyproject.toml
backend/api/: settings.py  urls.py
backend/misc/: db.sql  movie_data.csv
backend/misc/seed_data/: auth_permission.sql  django_content_type.sql  django_migrations.sql  django_session.sql  movies_genre.sql  movies_movie_cast_and_crew.sql  movies_movie_genre.sql  movies_person.sql  users_user.sql
backend/movies/: admin.py  models.py  serializers.py  test_movies.py  views.py
backend/movies/migrations/: 0001_initial.py  0002_adjust_fields_for_nullable.py  0002_list_userstreamingplatform_userlist_movielist_and_more.py  0003_default_date_to_min.py  0003_movielist_date_added_alter_list_id_userwatchedmovies.py  0004_movielist_date_watched_alter_list_id_and_more.py  0005_list_user_id_alter_list_id_and_more.py  0006_alter_list_id_alter_movielist_date_added_and_more.py  0007_alter_list_id_alter_movielist_date_added_and_more.py  0008_alter_list_id_alter_movielist_date_added_and_more.py
backend/scripts/: pull_movie_data.py
backend/spooky_movies/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_lists_user_streaming_platforms_alter_user_id.py  0002_user_uuid_alter_user_email_alter_user_first_name_and_more.py  (+9 more)
public/: ghost.ai
(+58 files in other folders)
