[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["stephen <kernan.software@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
